documented cart and product endpoints with swagger ui & created category exceptions